   number. The way it is rendered is subject to change.

 * properly render package ID (not package key) in index (#329)

 * links to source location of class instance definitions

 * Fix code blocks in presence of Windows line endings

 * Deal better with long synopsis lines (#151)

 * Don't default to type constructors for out-of-scope names (#253 and
   #375)

Changes in version 2.15.0

 * Always read in prologue files as UTF8 (#286 and Cabal #1721)

 * parser: don't wrap headers in DocParagraph (#307)

 * parser: don't mangle append order for nested lists (pandoc #1346)

 * parser: preserve list ordering in certain scenarios (#313)

 * parser: update the attoparsec version used internally giving slight
   parsing performance boost.

 * Move development to be against latest GHC release and not GHC HEAD.

 * Further split up the package to separate the executable from the
   library, necessary by things like GHCJS. We now have
   ‘haddock-library’ which are the parts that don't use GHC API,
   ‘haddock-api’ which are (some of) the parts that do use GHC API and
   ‘haddock’ which merely provides the executable.

 * Export few extra functions in the API.

 * Add compatibility with GHC 7.8.2.

 * Omit unnecessary ‘forall’s (#315 and #86)

 * Remove some files which were really old or did not belong in the
   repository in the first place.

Changes in version 2.14.3

 * Fix parsing of identifiers with ^ or ⋆ in them (#298)

 * Fix anchors (#308)

Changes in version 2.14.2

 * Always drop --split-objs GHC flag for performance reasons (#292)

 * Print kind signatures GADTs (#85)

 * Drop single leading whitespace when reasonable from @-style blocks (#201)

 * Fix crashes associated with exporting data family record selectors (#294)

Changes in version 2.14.1

 * Render * and -> with their UnicodeSyntax equivalents if -U is enabled

 * Display minimal complete definitions for type classes

 * Hide right hand side of TF instances with hidden names on the RHS
